--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.message.MessageFragment">
+    tools:context=".ui.message.MessageFragment"
+    android:background="@color/color_teacher">
 
     <TextView
         android:id="@+id/text_message"
