--- a/app/src/main/res/layout/fragment_coursemanager.xml
+++ b/app/src/main/res/layout/fragment_coursemanager.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.coursemanager.CourseManagerFragment"
+    tools:context=".ui.instructor.CourseManagerFragment"
     android:background="@color/color_teacher">
 
     <TextView
