--- a/app/src/main/res/layout/fragment_manageprofile.xml
+++ b/app/src/main/res/layout/fragment_manageprofile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.manageprofile.ManageProfileFragment"
+    tools:context=".ui.instructor.ManageProfileFragment"
     android:background="@color/color_teacher">
 
     <TextView
