--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.instructor.DashboardFragment"
-    android:background="@color/color_teacher">
+    tools:context=".ui.instructor.DashboardFragment">
 
     <TextView
         android:id="@+id/text_dashboard"
