--- a/app/src/main/res/layout/fragment_salesreport.xml
+++ b/app/src/main/res/layout/fragment_salesreport.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.instructor.SalesReportFragment"
-    android:background="@color/color_teacher">
+    tools:context=".ui.instructor.SalesReportFragment">
 
     <TextView
         android:id="@+id/text_salesreport"
