--- a/app/src/main/res/layout/fragment_student_account.xml
+++ b/app/src/main/res/layout/fragment_student_account.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/card_2"
+    android:background="@drawable/bg"
+
     tools:context=".ui.student.StudentAccountFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -13,6 +15,22 @@
         android:gravity="center"
         android:text="@string/account_text"
         android:textColor="@color/black"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+
+        android:id="@+id/bottom_navigation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_margin="30dp"
+        android:background="@drawable/round_corner"
+        android:elevation="2dp"
+        app:itemIconSize="30dp"
+        app:itemIconTint="@drawable/item_selector"
+        app:itemRippleColor="@android:color/transparent"
+        app:labelVisibilityMode="unlabeled"
+        app:menu="@menu/item_menu" />
+
 
 </FrameLayout>
