--- a/app/src/main/res/layout/student_navigation_drawer_activity.xml
+++ b/app/src/main/res/layout/student_navigation_drawer_activity.xml
@@ -14,13 +14,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_margin="30dp"
-        android:elevation="2dp"
-        app:menu="@menu/item_menu"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/round_corner"
-        app:itemRippleColor="@android:color/transparent"
+        android:elevation="2dp"
         app:itemIconSize="30dp"
+        app:itemIconTint="@drawable/item_selector"
+        app:itemRippleColor="@android:color/transparent"
         app:labelVisibilityMode="unlabeled"
-        app:itemIconTint="@drawable/item_selector"/>
+        app:menu="@menu/item_menu" />
 
 </RelativeLayout>
