Create and save the related information of 'admin'

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,11 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    
-    <color name="light_white">#D2D2D2</color>
-    <color name="card_1">#A3E4D7</color>
-    <color name="card_2">#F9E79F</color>
-    <color name="card_3">#D7BDE2</color>
-    <color name="card_4">#D2C3D8</color>
 
+
+    <color name="app_color">#FFFBF1</color>
+    <color name="intro_color">#FDC983</color>
+    <color name="layout_color">#FFF1C5</color>
 </resources>
