--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,7 +109,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword" />
 
             <TextView
-                android:id="@+id/textViewHaveAcc"
+                android:id="@+id/textViewCreateNewAccount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -131,7 +131,7 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewHaveAcc" />
+                app:layout_constraintTop_toBottomOf="@+id/textViewCreateNewAccount" />
 
             <View
                 android:id="@+id/view2"
