--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -198,7 +198,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />
 
             <TextView
-                android:id="@+id/textViewHaveAcc"
+                android:id="@+id/textViewAlreadyHaveAccount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
